--- a/src/pages/farmer/sign-up/sign-up.scss
+++ b/src/pages/farmer/sign-up/sign-up.scss
@@ -1,3 +1,29 @@
 page-sign-up {
+  .error {
+    border: 1px solid red;
+  }
 
+  .custom-button {
+    border-radius: 25px;
+    padding: 10px 0px 10px 0px;
+    color: white;
+    background-color: #F4511E;
+    text-align: center;
+    font-size: 20px
+  }
+
+  .custom-input {
+    border-radius: 25px;
+    padding: 10px 0px 10px 0px;
+    text-align: center;
+  }
+
+  .custom-invalid-button {
+    border-radius: 25px;
+    padding: 10px 0px 10px 0px;
+    color: white;
+    background-color: #EF9A9A;
+    text-align: center;
+    font-size: 20px
+  }
 }
