everything work fine

--- a/src/pages/farmer/home/home.scss
+++ b/src/pages/farmer/home/home.scss
@@ -30,7 +30,7 @@ page-home {
   }
   select {
     width: 100%;
-    display: table;
+    // display: table;
     border-style: none;
     background-color: white;
 }
